; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/imageio/extr_wicdec.c_ReadPictureWithWIC.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/imageio/extr_wicdec.c_ReadPictureWithWIC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.WebPPicture = type { i32 }
%struct.Metadata = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [221 x i8] c"Windows Imaging Component (WIC) support not compiled. Visual Studio and mingw-w64 builds support WIC. Make sure wincodec.h detection is working correctly if using autoconf and HAVE_WINCODEC_H is defined before building.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReadPictureWithWIC(i8* %0, %struct.WebPPicture* %1, i32 %2, %struct.Metadata* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.WebPPicture*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.Metadata*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.WebPPicture* %1, %struct.WebPPicture** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.Metadata* %3, %struct.Metadata** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load %struct.WebPPicture*, %struct.WebPPicture** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.Metadata*, %struct.Metadata** %8, align 8
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([221 x i8], [221 x i8]* @.str, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
